tests/golden/type_errors/for_initializer_scope_escape.cd
for let i = 0; i < 1; i = i + 1 {
  print i;
}
print i;
